# mkdocs_clios

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
mkdocs_clios/: plugin.py
scripts/: lint.sh
tests/: test_plugin.py
tests/dummy/: app.py  invalid_app.py
